--- a/src/cardBack.css
+++ b/src/cardBack.css
@@ -2,17 +2,30 @@
     background: url(./imgs/card-BG-back.png);
     background-size:cover;
     margin-left: 60%;
-    width: 107%;
+    width: max-content;
     border-radius: 10px;
     padding-top: clamp(14px, 5.1%, 24px);
     padding-bottom: clamp(27px, 10.5%, 50px)
 }
 
 .black-line{
-    width: 100%;
+    width: max-content;
     margin-bottom: clamp(14px, 5.1%, 24px);
     height: clamp(35px,  3.8vw, 55px);
     background:  #2F2F2F;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.black-line p{
+    font-size: clamp(1rem, 1.9vw, 2rem);
+    font-style: normal;
+    font-weight: 500;
+    line-height: 36px;
+    letter-spacing: 3.42222px;
+    display: inline-block;
+    color: transparent;
+    padding: clamp(15px, 10%, 25px);
 }
 
 .cvc-display-back{
@@ -29,6 +42,8 @@
     letter-spacing: 2px;
     text-transform: uppercase;
     color: #FFFFFF;
+    display: flex;
+    justify-content: space-between;
 }
 .card-back-stripes{
     width: 100%;
@@ -38,4 +53,17 @@
 }
 .card-back-stripes img{
     width: 42%;
+}
+.cvc-hidden{
+    place-self: left;
+    color: transparent;
+    display: inline-block;
+}
+
+@media (max-width: 750px){
+    .card-back{
+        position: relative;
+        z-index: 0;
+        margin-left: 20%;
+    }
 }
