--- a/src/cardAdded.css
+++ b/src/cardAdded.css
@@ -3,8 +3,10 @@
     flex-direction: column;
     gap: 35px;
     align-items: center;
+    margin-left: 20%;
 }
 .card-added p{
+    font-family: 'Space Grotesk';
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
@@ -13,6 +15,7 @@
     color: #8F8694;
 }
 .thanks{
+    font-family: 'Space Grotesk';
     font-style: normal;
     font-weight: 500;
     font-size: 28px;
@@ -25,7 +28,7 @@
     width: 80px;
     height: 80px;
 }
-@media (max-width: 750px){
+@media (max-width: 800px){
     .card-added{
         margin-left: 0;
         margin-top: clamp(80px, 30vw, 150px)
