--- a/src/cardBack.css
+++ b/src/cardBack.css
@@ -5,7 +5,8 @@
     width: max-content;
     border-radius: 10px;
     padding-top: clamp(14px, 5.1%, 24px);
-    padding-bottom: clamp(27px, 10.5%, 50px)
+    padding-bottom: clamp(27px, 10.5%, 50px);
+    font-family: 'Space Grotesk';
 }
 
 .black-line{
@@ -14,10 +15,12 @@
     height: clamp(35px,  3.8vw, 55px);
     background:  #2F2F2F;
     display: flex;
+    font-family: 'Space Grotesk';
     justify-content: center;
     align-items: center;
 }
 .black-line p{
+    font-family: 'Space Grotesk';
     font-size: clamp(1rem, 1.9vw, 2rem);
     font-style: normal;
     font-weight: 500;
@@ -29,6 +32,7 @@
 }
 
 .cvc-display-back{
+    font-family: 'Space Grotesk';
     width: clamp(230px, 80%, 370px);
     padding: 2.7%;
     background: #ADB5BE;
@@ -55,12 +59,13 @@
     width: 42%;
 }
 .cvc-hidden{
+    font-family: 'Space Grotesk';
     place-self: left;
     color: transparent;
     display: inline-block;
 }
 
-@media (max-width: 750px){
+@media (max-width: 800px){
     .card-back{
         position: relative;
         z-index: 0;
